# desafio-data-analytics

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: base_produtos_tratada.csv
notebooks/: Case_Manchester_EDA_e_Data_Quality.ipynb  Case_Manchester_Graficos.ipynb  README.md
powerbi/: README.md
sql/: README.md  analises.sql  create_tables.sql  load_data.sql
