[tool.poetry]
name = "desafio-data-analytics"
version = "0.1.0"
description = ""
authors = ["Samy Celes <samyceles14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
